--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,12 @@
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.0</version>
+			<version>4.8.2</version>
+		</dependency>
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava-testlib</artifactId>
+			<version>12.0-rc2</version>
 		</dependency>
 	</dependencies>
 </project>
